feat: Generate alembic migration and setup database with needed models, schema and database files

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://book_admin:pass123@localhost:5432/book_reviews_db
+DEBUG=True // for development purposes, set to False in production
