--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ backend/venv
 backend/.env
 backend/app/__pycache__
 backend/alembic/__pycache__
+backend/app/database/__pycache__
+backend/app/models/__pycache__
+backend/alembic/versions/__pycache__
