--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://book_admin:pass123@localhost:5432/book_reviews_db
+REDIS_URL=redis://localhost:6379
 DEBUG=True // for development purposes, set to False in production
