fix: Add redis dependencies, update utils initialization  and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 backend/venv
 backend/.env
-backend/app/__pycache__
-backend/alembic/__pycache__
-backend/app/database/__pycache__
-backend/app/models/__pycache__
-backend/alembic/versions/__pycache__
+**/__pycache__/
