--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,43 @@ version: '3.9'
 services:
   db:
     image: postgres:15
+    restart: always
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: book_admin
-      POSTGRES_PASSWORD: pass123
-      POSTGRES_DB: book_reviews_db
-    volumes:
-      - db_data:/var/lib/postgresql/data
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
 
   redis:
     image: redis:7
+    restart: always
+    env_file:
+      - .env
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
 
   backend:
     build: ./backend
+    restart: always
+    env_file:
+      - .env
     environment:
-      - DATABASE_URL=postgresql://book_admin:pass123@db:5432/book_reviews_db
-      - REDIS_URL=redis://redis:6379/0
-      - PYTHONUNBUFFERED=1
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      REDIS_HOST: ${REDIS_HOST}
+      REDIS_PORT: ${REDIS_PORT}
+      SECRET_KEY: ${SECRET_KEY}
+      DEBUG: ${DEBUG}
     depends_on:
       - db
       - redis
@@ -33,14 +50,16 @@ services:
 
   frontend:
     build: ./frontend
+    restart: always
+    env_file:
+      - .env
     environment:
-      - VITE_API_URL=http://backend:8000
+      VITE_API_URL: ${VITE_API_URL}
     depends_on:
       - backend
     ports:
       - "80:80"
-    volumes:
-      - ./frontend:/app
 
 volumes:
   db_data:
+  redis_data:
